# prometheus-grpc-bridge

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
examples/: grpc_server.rs
protos/: prometheus.proto
src/: commands.rs  logging.rs  main.rs
