[package]
name = "prometheus-grpc-bridge"
version = "0.2.0-unstable"
edition = "2021"
license = "EUPL-1.2"
description = "A gRPC client CLI to fetch Prometheus metrics from the Barcode API"
repository = "https://git.nyris.io/vision/barcodes/barcode-api"
authors = ["Markus Mayer <m.mayer@nyris.io>"]
rust-version = "1.67.1"
keywords = ["metrics", "prometheus", "grpc"]
categories = ["visualization", "api-bindings"]

[[example]]
name = "grpc_server"
path = "examples/grpc_server.rs"

[dependencies]
clap = { version = "4.1.6", features = ["env"] }
dotenvy = "0.15.6"
prost = "0.11.8"
tonic = { version = "0.8.3", features = ["gzip", "tracing-futures"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["attributes", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "parking_lot", "tracing-log", "json"] }
warp = { version = "0.3.3", features = ["async-compression", "compression"] }

[dev-dependencies]
anyhow = "1.0.69"
lazy_static = "1.4.0"
prometheus = "0.13.3"
prost = "0.11.6"
tonic-reflection = "0.6.0"

[build-dependencies]
anyhow = "1.0.69"
tonic-build = { version = "0.8.4", features = ["cleanup-markdown"] }
vergen = "7.5.1"
